--- a/base.html
+++ b/base.html
@@ -48,6 +48,7 @@
       {% endif %}
     {% endblock %}
     {% block styles %}
+      <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/bootstrap.min.css">
       <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/font-awesome.min.css">
       <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/application.451f80e5.css">
       {% if palette.primary or palette.accent %}
